src/objects/Previous_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Previous Applications</relationshipLabel>
        <relationshipName>Previous_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Not_Successful_Reasons__c</fullName>
        <label>Not Successful Reasons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Was_It_Successful__c</fullName>
        <label>Was It Successful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Previous Application</label>
    <nameField>
        <label>Previous Application Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>